php/kubernetes-manifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-php
  labels:
    app: devops-php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-php
  template:
    metadata:
      labels:
        app: devops-php
    spec:
      serviceAccountName: devops-php
      containers:
        - name: devops-php
          image: 417687554336.dkr.ecr.eu-north-1.amazonaws.com/docplanner-php:latest
          imagePullPolicy: Always
          command: ["/bin/sh"]
          args: ["/entrypoint.sh"]
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
