php/kubernetes-manifest/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-php-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/group.name: devops-app
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path:  /api/v2/
          pathType: Prefix
          backend:
            service:
              name: devops-php
              port:
                number: 80
